@@ -16,7 +16,7 @@
 	<table class="typo3-dblist" id="linkvalidator_table" cellspacing="1" cellpadding="0">
 		<tr class="t3-row-header">
 			<td>
-				<label>###TOTAL_COUNT_LABEL###</label>
+				###TOTAL_COUNT_LABEL###
 			</td>
 			<td class="number">###TOTAL_COUNT###</td>
 		</tr>
